display number of cards selected on table

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -49,13 +49,13 @@
                                 </div>
                             </form>
                             <div id="matcardwrap">
-                                <div class="card unselectable schelle six player3" style="">
+                                <div *ngIf="numberOfCardsSelected > 3" class="card unselectable schelle {{getCardNumberClass(cardService.lastCard.number)}} player3" style="">
                                     <div class="cardimg"></div>
                                 </div>
-                                <div class="card unselectable roesle zehn player1" style="">
+                                <div *ngIf="numberOfCardsSelected > 2" class="card unselectable roesle {{getCardNumberClass(cardService.lastCard.number)}} player1" style="">
                                     <div class="cardimg"></div>
                                 </div>
-                                <div class="card unselectable roesle under player2" style="">
+                                <div *ngIf="numberOfCardsSelected > 1" class="card unselectable roesle {{getCardNumberClass(cardService.lastCard.number)}} player2" style="">
                                     <div class="cardimg"></div>
                                 </div>
                                 <div class="card unselectable {{getCardTypeClass(cardService.lastCard.type)}} {{getCardNumberClass(cardService.lastCard.number)}} player0" style="">
