--- a/PresidentFront/src/app/game/game.component.css
+++ b/PresidentFront/src/app/game/game.component.css
@@ -670,8 +670,15 @@ body {
 .player0.hand > .cardholderwrap { transform: rotate(0deg); }
 .player1.hand > .cardholderwrap { transform: rotate(-90deg); }
 .player2.hand > .cardholderwrap { transform: rotate(-180deg); }
+.player4.hand > .cardholderwrap { transform: rotate(-180deg); }
 .player3.hand > .cardholderwrap { transform: rotate(-270deg); }
 
+.player4{
+    left: -30%;
+}
+.player2{
+    left: 30%;
+}
 /**
  * Container with the size of a card, aspect ratio 127/178 (a card).
  *
