--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -25,6 +25,19 @@
             <div class="namefield">{{playerCards[playersIndexes[2]].name}}{{playerCards[playersIndexes[2]].cards.length == 0 ? " - Finised":""}}</div>
             <div class="stiche"></div>
         </div>
+        <div *ngIf="playersIndexes.length > 2" class="player4 hand">
+            <div class="cardholderwrap">
+                <div class="cardholder">
+                    <div *ngFor="let card of playerCards[playersIndexes[2]].cards">
+                        <div  class="card" [style.transform]="'rotate('+(card.rotation)+'deg)'">
+                            <div class="cardimg"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="namefield">{{playerCards[playersIndexes[2]].name}}{{playerCards[playersIndexes[2]].cards.length == 0 ? " - Finised":""}}</div>
+            <div class="stiche"></div>
+        </div>
         <div id="innergamecontent">
             <div *ngIf="playersIndexes.length > 1" class="player3 hand">
                 <div class="cardholderwrap">
