lower nametag for player 0

--- a/PresidentFront/src/app/game/game.component.css
+++ b/PresidentFront/src/app/game/game.component.css
@@ -685,6 +685,11 @@ body {
     left: 30%;
     top: 7%;
 }
+.player0.hand .namefield
+{
+    position: relative;
+    top: 10%;
+}
 /**
  * Container with the size of a card, aspect ratio 127/178 (a card).
  *
