close and open scoreboard on click

--- a/PresidentFront/src/app/game/game.component.html
+++ b/PresidentFront/src/app/game/game.component.html
@@ -123,9 +123,21 @@
 
     <div id="gui">
         
-
+        <div id="top-right-button-wrapper">
+            <div class="toggle-scoreboard" (click)="scoreboardClicked()">
+                Ok so I hate homework and you wanna know why? DO YOU WANNA KNOW WHY? Because homework is work at home.
+                And guess what? GUESS WHAT? My mom won't let me play Minecraft until I finish my homework. SHE WON'T LET
+                ME PLAY MINECRAFT! This is atrocious, because Jack and Nathaniel are online and I can't play with them,
+                and then when I get online they're done. THEIR MOM LETS THEM PLAY MINECRAFT BEFORE HOMEWORK! I hate it
+                so much. I HATE IT! And one time, ohhhh this one time, she caught me playing Minecraft before homework.
+                You know what she did? YOU KNOW WHAT SHE DID? She took away my Xbox for a week. 7 WHOLE DAYS! SHE'S THE
+                WORST MOM EVER! I said, "Mom, let me play! I just crafted my first shovel!" And she didn't care. She did
+                not care. She just hit the stupid off button on the TV. SHE JUST TURNED THE TV OFF AND I LOST MY SHOVEL!
+                I hate homework, and I hate my mom. Ugh.
+            </div>
+        </div>
         <div id="trumpf"></div>
-        <div class="pop-up-window-container" id="score" style="display: none;">
+        <div class="pop-up-window-container" id="score" [style.display]="displayScoreboard ? '' : 'none'" (click)="scoreboardClicked()">
             <div class="pop-up-window" id="score-window">
                 <div class="title-2">Scoreboard</div> <br>
                 <table class="scoretable">
